Update environment variable names for Google Sheets; enhance Next.js configuration with experimental features and image settings.

--- a/env.example
+++ b/env.example
@@ -16,4 +16,4 @@ NEXT_PUBLIC_GOOGLE_SPREADSHEET_ID=your_google_sheet_id_here
 # - STRIPE_SECRET_KEY should start with 'sk_test_' for test mode or 'sk_live_' for production
 # - NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY should start with 'pk_test_' for test mode or 'pk_live_' for production
 # - GOOGLE_PRIVATE_KEY should include the entire private key including BEGIN and END markers
-# - GOOGLE_SHEET_ID is the ID from your Google Sheets URL
+# - GOOGLE_SPREADSHEET_ID is the ID from your Google Sheets URL
